# back/docs/swagger.json
@@ -2034,14 +2034,14 @@
                 }
             }
         },
-        "/search/entity-types": {
+        "/search/indices": {
             "get": {
                 "security": [
                     {
                         "Bearer": []
                     }
                 ],
-                "description": "获取所有支持搜索的实体类型列表",
+                "description": "获取所有支持搜索的索引列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -2051,10 +2051,10 @@
                 "tags": [
                     "搜索"
                 ],
-                "summary": "获取实体类型列表",
+                "summary": "获取索引列表",
                 "responses": {
                     "200": {
-                        "description": "实体类型列表",
+                        "description": "索引列表",
                         "schema": {
                             "$ref": "#/definitions/application.IndexListResponse"
                         }
@@ -3351,25 +3351,67 @@
                 "address": {
                     "type": "string"
                 },
-                "contact": {
+                "addressEn": {
                     "type": "string"
                 },
-                "created_at": {
+                "checkRequest": {
+                    "type": "string"
+                },
+                "contactor": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "customName": {
+                    "type": "string"
+                },
+                "customNameEn": {
+                    "type": "string"
+                },
+                "customNo": {
+                    "type": "string"
+                },
+                "customStatus": {
+                    "type": "string"
+                },
+                "customerCode": {
+                    "type": "string"
+                },
+                "docMan": {
                     "type": "string"
                 },
                 "email": {
                     "type": "string"
                 },
+                "faxNum": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "inputDate": {
                     "type": "string"
                 },
-                "phone": {
+                "mobile": {
                     "type": "string"
                 },
-                "updated_at": {
+                "pyCustomName": {
+                    "type": "string"
+                },
+                "sales": {
+                    "type": "string"
+                },
+                "stateChNm": {
+                    "type": "string"
+                },
+                "unitPhone": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -3377,28 +3419,83 @@
         "application.CreateClientRequest": {
             "type": "object",
             "required": [
-                "name"
+                "customName",
+                "customNo"
             ],
             "properties": {
                 "address": {
                     "type": "string",
+                    "maxLength": 500
+                },
+                "addressEn": {
+                    "type": "string",
+                    "maxLength": 500
+                },
+                "checkRequest": {
+                    "type": "string"
+                },
+                "contactor": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "country": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "customName": {
+                    "type": "string",
+                    "maxLength": 200,
+                    "minLength": 2
+                },
+                "customNameEn": {
+                    "type": "string",
                     "maxLength": 200
                 },
-                "contact": {
+                "customNo": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "customStatus": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "customerCode": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "docMan": {
                     "type": "string",
                     "maxLength": 50
                 },
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "faxNum": {
                     "type": "string",
-                    "maxLength": 100,
-                    "minLength": 2
+                    "maxLength": 50
                 },
-                "phone": {
+                "inputDate": {
+                    "type": "string"
+                },
+                "mobile": {
                     "type": "string",
-                    "maxLength": 20
+                    "maxLength": 50
+                },
+                "pyCustomName": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "sales": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "stateChNm": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "unitPhone": {
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
@@ -3720,7 +3817,7 @@
         "application.IndexListResponse": {
             "type": "object",
             "properties": {
-                "entityTypes": {
+                "indices": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -4159,7 +4256,7 @@
         "application.SearchRequest": {
             "type": "object",
             "required": [
-                "entityType"
+                "index"
             ],
             "properties": {
                 "aggRequests": {
@@ -4169,14 +4266,14 @@
                         "$ref": "#/definitions/application.AggRequest"
                     }
                 },
-                "entityType": {
-                    "description": "material, order, client, etc.",
-                    "type": "string"
-                },
                 "filters": {
                     "description": "筛选条件",
                     "type": "object",
                     "additionalProperties": true
+                },
+                "index": {
+                    "description": "clients, suppliers, orders, etc.",
+                    "type": "string"
                 },
                 "pagination": {
                     "$ref": "#/definitions/application.PaginationRequest"
@@ -4281,23 +4378,77 @@
             "properties": {
                 "address": {
                     "type": "string",
+                    "maxLength": 500
+                },
+                "addressEn": {
+                    "type": "string",
+                    "maxLength": 500
+                },
+                "checkRequest": {
+                    "type": "string"
+                },
+                "contactor": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "country": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "customName": {
+                    "type": "string",
+                    "maxLength": 200,
+                    "minLength": 2
+                },
+                "customNameEn": {
+                    "type": "string",
                     "maxLength": 200
                 },
-                "contact": {
+                "customNo": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "customStatus": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "customerCode": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "docMan": {
                     "type": "string",
                     "maxLength": 50
                 },
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "faxNum": {
                     "type": "string",
-                    "maxLength": 100,
-                    "minLength": 2
+                    "maxLength": 50
                 },
-                "phone": {
+                "inputDate": {
+                    "type": "string"
+                },
+                "mobile": {
                     "type": "string",
-                    "maxLength": 20
+                    "maxLength": 50
+                },
+                "pyCustomName": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "sales": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "stateChNm": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "unitPhone": {
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
